<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="7dp"
    android:layout_marginRight="7dp"
    android:gravity="center">

    
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/white"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_option"
                android:textSize="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"/>
            <LinearLayout
                android:id="@+id/tookPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:paddingLeft="15dp"
                android:padding="10dp"
                android:foreground="?android:attr/selectableItemBackground">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="30dp"
                    android:minHeight="30dp"
                    android:src="@drawable/ic_photo_camera_black_24dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/camara"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginLeft="12dp"
                    android:textSize="17sp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/chooseGallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:padding="10dp"
                android:foreground="?android:attr/selectableItemBackground">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="30dp"
                    android:minHeight="30dp"
                    android:src="@drawable/ic_image_black_24dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/imagen"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginLeft="12dp"
                    android:textSize="17sp"/>
            </LinearLayout>
            <TextView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelar"
                android:layout_gravity="right"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:foreground="?android:attr/selectableItemBackground"/>
        </LinearLayout>


    </android.support.v7.widget.CardView>

</RelativeLayout>