<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="yucatancountryclub.com.ycc.QRDetailActivity">

    <!-- TODO: Update blank fragment layout -->
    <include layout="@layout/actionbar_toolbar"/>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <LinearLayout
                android:background="@color/bg_screen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/accessDetail_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Visitante"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"/>
                <ImageView
                    android:layout_width="229dp"
                    android:layout_height="229dp"
                    android:id="@+id/QRImage"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="22dp"
                    android:layout_marginBottom="34dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/margin_25">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold"
                        android:text="@string/name_access"/>
                    <TextView
                        android:id="@+id/visitorNameDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_text"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/colorPrimaryDark"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/margin_25">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold"
                        android:text="@string/time_access"/>
                    <TextView
                        android:id="@+id/checkInDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_text"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/colorPrimaryDark"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/margin_25">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold"
                        android:text="@string/date_access"/>
                    <TextView
                        android:id="@+id/checkOutDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_text"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/colorPrimaryDark" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/margin_25">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold"
                        android:text="@string/car"/>
                    <TextView
                        android:id="@+id/car"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_text"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/colorPrimaryDark" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/margin_25">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold"
                        android:text="@string/car_color_2"/>
                    <TextView
                        android:id="@+id/car_color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_text"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/colorPrimaryDark" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/margin_25">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold"
                        android:text="@string/license_plate"/>
                    <TextView
                        android:id="@+id/license_plate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_text"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/colorPrimaryDark" />
                </LinearLayout>
                <RelativeLayout
                    android:id="@+id/share"
                    android:layout_width="213dp"
                    android:padding="7dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="29dp"
                    android:background="@layout/directory_detail_contact">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/share"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:layout_centerInParent="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginRight="56dp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/compartir"
                        android:layout_alignParentEnd="true"
                        />

                </RelativeLayout>

            </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
